manifests/cloudbees-cd/cloudbees-flow/templates/bound-agent-deployment.yaml
---
# Source: cloudbees-flow/templates/bound-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow-bound-agent
  namespace: cloudbees-cd
  labels:
    app: flow-bound-agent
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: flow-bound-agent
      release: cloudbees-cd
  template:
    metadata:
      labels:
        app: flow-bound-agent
        release: cloudbees-cd
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: default
      containers:
        - name: flow-agent
          image: "docker.io/cloudbees/cbflow-agent:10.2.1.150122_3.0_20210802"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 7800
            initialDelaySeconds: 60
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["/opt/cbflow/health-check"]
            initialDelaySeconds: 60
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "ectool --server $CBF_SERVER_HOST deleteResource $HOSTNAME"]
            postStart:
              exec:
                command: ["/bin/bash", "/custom-scripts/custom-install.sh"]
          ports:
          - containerPort: 7800
            name: p4-agent
            protocol: TCP
          resources:
            limits:
              cpu: "0.25"
              memory: 1024Mi
            requests:
              cpu: "0.25"
              memory: 512Mi
          volumeMounts:
          - name: logback-config
            mountPath: /custom-config/agent/logback-local.groovy
            subPath: agent-logback-config
          - name: customscript-config
            mountPath: /custom-scripts
      volumes:
      - name: logback-config
        configMap:
          name: flow-logging-config
      - name: customscript-config
        secret:
          secretName: "cloudbees-cd-agent-customscript"
