manifests/cloudbees-cd/cloudbees-flow/templates/dois-stateful-set.yaml
---
# Source: cloudbees-flow/templates/dois-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flow-devopsinsight
  labels:
    app: flow-devopsinsight
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  replicas: 1
  podManagementPolicy: "Parallel"
  serviceName: flow-devopsinsight
  selector:
    matchLabels:
      app: flow-devopsinsight
      release: cloudbees-cd
  template:
    metadata:
      labels:
        app: flow-devopsinsight
        release: cloudbees-cd
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: default
      containers:
      - name: flow-devopsinsight
        image: "docker.io/cloudbees/cbflow-dois:10.2.1.150122_3.0_20210802"
        imagePullPolicy: IfNotPresent
        readinessProbe:
          tcpSocket:
# Actually, the logstash port (9500) should be specified here, as the service is fully operational
# when both elasticsearch and logstash are available, and the logstash process is started only
# after the elasticsearch is successfully initialized. But for elasticsearch initialization, it
# needs to connect to other nodes by their domain name. On the other hand, the other nodes
# don't get the domain name until they are in "ready" state.
# In this regard, we specify elasticsearch port to signal that the service is ready to receive
# the domain name.
            port: 9200
          initialDelaySeconds: 60
          periodSeconds: 5
        livenessProbe:
          exec:
            command: ["/opt/cbflow/health-check"]
          initialDelaySeconds: 60
          periodSeconds: 20
        ports:
        - name: p1-dois
          containerPort: 9200
          protocol: TCP
        - name: p2-dois
          containerPort: 9500
          protocol: TCP
        resources:
            limits:
              cpu: "1"
              memory: 3Gi
            requests:
              cpu: "0.1"
              memory: 2Gi
        volumeMounts:
        - mountPath: /elasticsearch-data
          name: elasticsearch-data

  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
