manifests/cloudbees-cd/cloudbees-flow/templates/server-deployment.yaml
---
# Source: cloudbees-flow/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow-server
  namespace: cloudbees-cd
  labels:
    app: flow-server
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: flow-server
      release: cloudbees-cd
  template:
    metadata:
      labels:
        app: flow-server
        release: cloudbees-cd
    spec:




      nodeSelector:
        kubernetes.io/os: linux

      serviceAccountName: default
      containers:
      - name: flow-server
        image: "docker.io/cloudbees/cbflow-server:10.2.1.150122_3.0_20210802"
        imagePullPolicy: IfNotPresent
        readinessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 10

        livenessProbe:
          exec:
            command: ["/opt/cbflow/health-check"]
          initialDelaySeconds: 90
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 10
        ports:
        - containerPort: 8000
          name: p1-chttp
          protocol: TCP
        - containerPort: 61613
          name: p1-stomp
          protocol: TCP
        - containerPort: 8443
          name: p6-jettys
          protocol: TCP
        resources:
          limits:
            cpu: "1.5"
            memory: 6Gi
          requests:
            cpu: "0.5"
            memory: 6Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: plugins-volume
          mountPath: /custom-config
        - name: init-scripts
          mountPath: /custom-config/startup.sh
          subPath: startup.sh
        - name: init-scripts
          mountPath: /custom-config/startup-serverup.sh
          subPath: startup-serverup.sh
        - name: init-scripts
          mountPath: /opt/cbflow/server/setup/01_setupRemoteRepository.pl
          subPath: register_repo.pl
        - name: customscript-config
          mountPath: /custom-scripts
        - name: plugins-volume
          mountPath: /plugins-data
        - name: logback-config
          mountPath: /custom-config/logback-local.groovy
          subPath: server-logback-config
      hostname: flow-server
      volumes:
      - name: plugins-volume
        persistentVolumeClaim:
          claimName: flow-server-shared
      - name: customscript-config
        secret:
          secretName: "cloudbees-cd-customscript"
      - name: logback-config
        configMap:
          name: flow-logging-config
      - name: init-scripts
        configMap:
          name: flow-init-scripts
