manifests/cloudbees-cd/cloudbees-flow/templates/web-deployment.yaml
---
# Source: cloudbees-flow/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow-web
  namespace: cloudbees-cd
  labels:
    app: flow-web
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: flow-web
      release: cloudbees-cd
  template:
    metadata:
      labels:
        app: flow-web
        release: cloudbees-cd
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: flow-server
      serviceAccountName: default
      containers:
        - name: flow-web
          image: "us-central1-docker.pkg.dev/fleet-cbp-poc/container-images/cbflow-web:release-10.2.1.150122_3.0_20210802"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 2080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["/opt/cbflow/health-check"]
            initialDelaySeconds: 10
            periodSeconds: 60
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: "0.25"
              memory: 256Mi
          ports:
          - name: http
            containerPort: 2080
            protocol: TCP
          - name: https
            containerPort: 2443
            protocol: TCP
          volumeMounts:
          - name: plugins-volume
            mountPath: "/plugins-data"
      volumes:
      - name: plugins-volume
        persistentVolumeClaim:
          claimName: "flow-server-shared"
