manifests/cloudbees-cd/cloudbees-flow/templates/bound-agent-service.yaml
---
# Source: cloudbees-flow/templates/bound-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-bound-agent
  namespace: cloudbees-cd
  labels:
    app: flow-bound-agent
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: p2
    port: 7800
    protocol: TCP
    targetPort: p4-agent
  selector:
    app: flow-bound-agent
    release: cloudbees-cd
