manifests/cloudbees-cd/cloudbees-flow/templates/database-service.yaml
---
# Source: cloudbees-flow/templates/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbees-cd-db
  namespace: cloudbees-cd
  labels:
    app: cloudbees-flow-external-db
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  type: ExternalName
  externalName: "mysql"
  selector: {}
