manifests/cloudbees-cd/cloudbees-flow/templates/server-service.yaml
---
# Source: cloudbees-flow/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-server
  namespace: cloudbees-cd
  labels:
    app: flow-server
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: servicep1-chttp
      port: 8000
      protocol: TCP
      targetPort: p1-chttp
    - name: servicep1-stomp
      port: 61613
      protocol: TCP
      targetPort: p1-stomp
    - name: servicep6jettys
      port: 8443
      protocol: TCP
      targetPort: p6-jettys
  selector:
    app: flow-server
    release: cloudbees-cd
